--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "1.0.0",
   "description": "A multi-chain DEX supporting atomic fizz caps game with EVM, Solana, and XRP support",
   "main": "dist/index.js",
+  "type": "module",
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "test": "jest",
+    "test": "hardhat test --no-compile",
+    "ci": "npm run build && npm test && npm audit --audit-level=high",
     "lint": "eslint . --ext .ts,.js",
     "compile-contracts": "hardhat compile",
     "deploy-evm": "hardhat run scripts/deploy-evm.ts",
+    "start:web": "(cd web && npm run dev)",
+    "start:relayer": "(cd relayer && npm run start)",
     "build-solana": "cargo build-bpf --manifest-path=contracts/solana/Cargo.toml"
   },
   "keywords": [
@@ -26,20 +30,23 @@
   "license": "MIT",
   "dependencies": {
     "@openzeppelin/contracts": "^5.4.0",
-    "@solana/spl-token": "^0.3.9",
+    "@solana/spl-token": "^0.1.8",
     "@solana/web3.js": "^1.87.0",
     "dotenv": "^16.3.1",
     "ethers": "^6.9.0",
     "xrpl": "^3.0.0"
   },
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^4.0.0",
+    "@nomicfoundation/hardhat-chai-matchers": "^2.1.0",
+    "@nomicfoundation/hardhat-ethers": "^4.0.4",
+    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
     "@types/jest": "^29.5.0",
     "@types/node": "^20.10.0",
     "@typescript-eslint/eslint-plugin": "^6.13.0",
     "@typescript-eslint/parser": "^6.13.0",
+    "chai": "^6.2.2",
     "eslint": "^8.54.0",
-    "hardhat": "^2.19.0",
+    "hardhat": "^3.1.8",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.0",
