--- a/package.json
+++ b/package.json
@@ -3,17 +3,13 @@
   "version": "1.0.0",
   "description": "A multi-chain DEX supporting atomic fizz caps game with EVM, Solana, and XRP support",
   "main": "dist/index.js",
-  "type": "module",
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "test": "hardhat test --no-compile",
-    "ci": "npm run build && npm test && npm audit --audit-level=high",
+    "test": "jest",
     "lint": "eslint . --ext .ts,.js",
     "compile-contracts": "hardhat compile",
     "deploy-evm": "hardhat run scripts/deploy-evm.ts",
-    "start:web": "(cd web && npm run dev)",
-    "start:relayer": "(cd relayer && npm run start)",
     "build-solana": "cargo build-bpf --manifest-path=contracts/solana/Cargo.toml"
   },
   "keywords": [
@@ -30,26 +26,36 @@
   "license": "MIT",
   "dependencies": {
     "@openzeppelin/contracts": "^5.4.0",
-    "@solana/spl-token": "^0.1.8",
+    "@solana/spl-token": "^0.3.9",
     "@solana/web3.js": "^1.87.0",
     "dotenv": "^16.3.1",
-    "ethers": "^6.9.0",
     "xrpl": "^3.0.0"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^2.1.0",
-    "@nomicfoundation/hardhat-ethers": "^4.0.4",
-    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
-    "@types/jest": "^29.5.0",
+    "@nomicfoundation/hardhat-ethers": "^3.1.3",
+    "@nomicfoundation/hardhat-network-helpers": "^1.1.2",
+    "@nomicfoundation/hardhat-toolbox": "^3.0.0",
+    "@nomicfoundation/hardhat-verify": "^1.1.1",
+    "@typechain/ethers-v6": "^0.4.3",
+    "@typechain/hardhat": "^8.0.3",
+    "@types/chai": "^5.2.3",
+    "@types/jest": "^29.5.14",
+    "@types/mocha": "^10.0.6",
     "@types/node": "^20.10.0",
+    "@types/node-fetch": "^2.6.13",
     "@typescript-eslint/eslint-plugin": "^6.13.0",
     "@typescript-eslint/parser": "^6.13.0",
-    "chai": "^6.2.2",
+    "chai": "^4.5.0",
     "eslint": "^8.54.0",
-    "hardhat": "^3.1.8",
+    "ethers": "^6.16.0",
+    "hardhat": "2.17.4",
+    "hardhat-gas-reporter": "^1.0.10",
     "jest": "^29.7.0",
-    "ts-jest": "^29.1.0",
+    "solidity-coverage": "^0.8.17",
+    "ts-jest": "^29.4.6",
     "ts-node": "^10.9.0",
+    "typechain": "^8.3.2",
     "typescript": "^5.3.0"
   }
 }
